* Some small changes to the look of the epigraph in default style
* Conversion part of the code was heavily refactored, so expect new bugs and crashes :)
* Changed default CSS settings for subtitle to allow a bit more space before subtitles (on the top)
* Subtitle element is no longer enclose in DIV - it was not needed


1.0.41
+ Added CSS style for "normal_image"
+ Switched to version 1.0.14 of FB2librarynet library that fixes several bug (detailed here)
+ Changed code to support more than one section image (as according to schema)
* Fixed the bug where images after section image were replacing section image
* Changed the non-section and non-inline images class to "normal_image" to be able to style them separately
* Changed command propmpt execution file to contain title and open one window right away

1.0.40
* Changed the way dropped capitals are calculated - now if section starts from any type of dash/hyphen looking character
  we add the character that follows it to the drop, this way it looks better
* Removed 2 character minimum limitation on dropped capitals

1.0.39
+ Added ability to draw "Capitalized" character (Huge "floating" character to start section that takes several lines)
+ Added new parameter -cap:[0/1] (default 1 -enabled) and .config setting "Capitalize" to control first character capitalization
* Changed the default CSS style to support first character capitalization
* Fixed old bug that prevented creation of multilevel headers <h1>,<h2>,<h3>,... based on depth(all <h2> were always created)
* Switched to newer version of UnRar library (Chikalite 9.1.2.0) 
* Changed setup to have 2 different versions for x64 and x86 since we actualy have 2 versions of Chikalite library,
   this should fix the bug with unable to unrar on x64 systems
* Added dependedncy of Chikalite library to MS VCRT DLLs

1.0.38
+ Reorganized code to add to GoogleCode
+ Added project links to resulting "About" page


1.0.37